--- a/cmd/web/admin/site/index.html
+++ b/cmd/web/admin/site/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="tarantula.admin.css"/>
     <script src="https://cdn.jsdelivr.net/npm/jsoneditor@10.1.0/dist/jsoneditor.min.js"></script>
     <script src="tarantula.admin.js"></script>
+    <script src="tarantula.player.js"></script>
     <script src="tarantula.html.js"></script>
     <title>iCodeSoftware</title>
     </head>
