--- a/cmd/web/admin/site/index.html
+++ b/cmd/web/admin/site/index.html
@@ -529,18 +529,27 @@
             
             function on_player_post(){
                 let job = Html.job(Html.currentTask().Name+"/"+Admin.query().job.name);
-                Admin.getJson(job.Form,(resp)=>{
-                    let conf ={id:"#tx-form-box",prefix:"player",closeable:true};
-                    Html.form(conf,resp,(data)=>{
-                        Player.postJson(job.Path,on_payload(data,job),(resp)=>{
-                            on_preview("Post View",resp);
-                            Player.login(resp);
-                            Player.query()[job.Name]=resp;
-                            console.log(Player.query());
-                        });      
+                if (job.hasOwnProperty("Form")){
+                    Admin.getJson(job.Form,(resp)=>{
+                        let conf ={id:"#tx-form-box",prefix:"player",closeable:true};
+                        Html.form(conf,resp,(data)=>{
+                            Player.postJson(job.Path,on_payload(data,job),(resp)=>{
+                                on_preview("Post View",resp);
+                                Player.login(resp);
+                                Player.query()[job.Name]=resp;
+                                console.log(Player.query());
+                            });      
+                        });
+                        Html.openWithId("#tx-form-box");
                     });
-                    Html.openWithId("#tx-form-box");
-                });    
+                    return 
+                }
+                Player.postJson(job.Path,on_payload({},job),(resp)=>{
+                    on_preview("Post View",resp);
+                    Player.login(resp);
+                    Player.query()[job.Name]=resp;
+                    console.log(Player.query());
+                });   
             }
 
             function on_player_get(){
