--- a/cmd/web/admin/site/index.html
+++ b/cmd/web/admin/site/index.html
@@ -557,7 +557,7 @@
                 if (job.hasOwnProperty("Form")){
                     Admin.getJson(job.Form,(resp)=>{
                         let conf ={id:"#tx-form-box",prefix:"player",closeable:true};
-                        Htexml.form(conf,resp,(data)=>{
+                        Html.form(conf,resp,(data)=>{
                             Player.getJson(on_path(job.Path,data,job),(resp)=>{
                                 on_preview("Get View",resp);
                                 //Player.login(resp);
